--- a/src/churn/C2021/APO-C2021-202106.ipynb
+++ b/src/churn/C2021/APO-C2021-202106.ipynb
@@ -2204,9 +2204,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1] \"2025-11-15 22:55:44 UTC\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# aplico el modelo a los datos del future\n",
     "\n",
@@ -2267,9 +2277,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A matrix: 5 × 9 of type dbl</caption>\n",
+       "<tbody>\n",
+       "\t<tr><td>386400000</td><td>388400000</td><td>396000000</td><td>397200000</td><td>402400000</td><td>398800000</td><td>393600000</td><td>395600000</td><td>395200000</td></tr>\n",
+       "\t<tr><td>383200000</td><td>388400000</td><td>394400000</td><td>402000000</td><td>400800000</td><td>400400000</td><td>400800000</td><td>396400000</td><td>394400000</td></tr>\n",
+       "\t<tr><td>386400000</td><td>387600000</td><td>397600000</td><td>401200000</td><td>400800000</td><td>404400000</td><td>404800000</td><td>397200000</td><td>396800000</td></tr>\n",
+       "\t<tr><td>381600000</td><td>389200000</td><td>390400000</td><td>395600000</td><td>396800000</td><td>398000000</td><td>396800000</td><td>396400000</td><td>395200000</td></tr>\n",
+       "\t<tr><td>389600000</td><td>390800000</td><td>396000000</td><td>398800000</td><td>399200000</td><td>400400000</td><td>397600000</td><td>396400000</td><td>396000000</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A matrix: 5 × 9 of type dbl\n",
+       "\\begin{tabular}{lllllllll}\n",
+       "\t 386400000 & 388400000 & 396000000 & 397200000 & 402400000 & 398800000 & 393600000 & 395600000 & 395200000\\\\\n",
+       "\t 383200000 & 388400000 & 394400000 & 402000000 & 400800000 & 400400000 & 400800000 & 396400000 & 394400000\\\\\n",
+       "\t 386400000 & 387600000 & 397600000 & 401200000 & 400800000 & 404400000 & 404800000 & 397200000 & 396800000\\\\\n",
+       "\t 381600000 & 389200000 & 390400000 & 395600000 & 396800000 & 398000000 & 396800000 & 396400000 & 395200000\\\\\n",
+       "\t 389600000 & 390800000 & 396000000 & 398800000 & 399200000 & 400400000 & 397600000 & 396400000 & 396000000\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A matrix: 5 × 9 of type dbl\n",
+       "\n",
+       "| 386400000 | 388400000 | 396000000 | 397200000 | 402400000 | 398800000 | 393600000 | 395600000 | 395200000 |\n",
+       "| 383200000 | 388400000 | 394400000 | 402000000 | 400800000 | 400400000 | 400800000 | 396400000 | 394400000 |\n",
+       "| 386400000 | 387600000 | 397600000 | 401200000 | 400800000 | 404400000 | 404800000 | 397200000 | 396800000 |\n",
+       "| 381600000 | 389200000 | 390400000 | 395600000 | 396800000 | 398000000 | 396800000 | 396400000 | 395200000 |\n",
+       "| 389600000 | 390800000 | 396000000 | 398800000 | 399200000 | 400400000 | 397600000 | 396400000 | 396000000 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "     [,1]      [,2]      [,3]      [,4]      [,5]      [,6]      [,7]     \n",
+       "[1,] 386400000 388400000 396000000 397200000 402400000 398800000 393600000\n",
+       "[2,] 383200000 388400000 394400000 402000000 400800000 400400000 400800000\n",
+       "[3,] 386400000 387600000 397600000 401200000 400800000 404400000 404800000\n",
+       "[4,] 381600000 389200000 390400000 395600000 396800000 398000000 396800000\n",
+       "[5,] 389600000 390800000 396000000 398800000 399200000 400400000 397600000\n",
+       "     [,8]      [,9]     \n",
+       "[1,] 395600000 395200000\n",
+       "[2,] 396400000 394400000\n",
+       "[3,] 397200000 396800000\n",
+       "[4,] 396400000 395200000\n",
+       "[5,] 396400000 396000000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "mganancias"
    ]
@@ -2294,7 +2358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
