--- a/src/churn/C2021/APO-C2021-202106.ipynb
+++ b/src/churn/C2021/APO-C2021-202106.ipynb
@@ -2370,11 +2370,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "id": "gWW3tatE12je"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1] \"2025-11-15 22:56:04 UTC\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# genero archivos de fantasia, que NO son el que voy a subir a la Pseudo Competencia Kaggle\n",
     "envios <- 11000\n",
@@ -2419,7 +2429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2431,7 +2441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2450,7 +2460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2465,9 +2475,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "400400000"
+      ],
+      "text/latex": [
+       "400400000"
+      ],
+      "text/markdown": [
+       "400400000"
+      ],
+      "text/plain": [
+       "[1] 400400000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "9620"
+      ],
+      "text/latex": [
+       "9620"
+      ],
+      "text/markdown": [
+       "9620"
+      ],
+      "text/plain": [
+       "[1] 9620"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A data.table: 1 × 5</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>numero_de_cliente</th><th scope=col>foto_mes</th><th scope=col>meta_modelo</th><th scope=col>prob</th><th scope=col>gan_acum</th></tr>\n",
+       "\t<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>831467430</td><td>202106</td><td>1</td><td>0.3289471</td><td>400400000</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A data.table: 1 × 5\n",
+       "\\begin{tabular}{lllll}\n",
+       " numero\\_de\\_cliente & foto\\_mes & meta\\_modelo & prob & gan\\_acum\\\\\n",
+       " <int> & <int> & <int> & <dbl> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t 831467430 & 202106 & 1 & 0.3289471 & 400400000\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A data.table: 1 × 5\n",
+       "\n",
+       "| numero_de_cliente &lt;int&gt; | foto_mes &lt;int&gt; | meta_modelo &lt;int&gt; | prob &lt;dbl&gt; | gan_acum &lt;dbl&gt; |\n",
+       "|---|---|---|---|---|\n",
+       "| 831467430 | 202106 | 1 | 0.3289471 | 400400000 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  numero_de_cliente foto_mes meta_modelo prob      gan_acum \n",
+       "1 831467430         202106   1           0.3289471 400400000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "icerca <- which.min(  abs( tb_prediccion$gan_acum - mcorte_mejor ) )\n",
     "vmodelo <- tb_prediccion[ icerca, meta_modelo ]\n",
@@ -2480,9 +2567,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "9620"
+      ],
+      "text/latex": [
+       "9620"
+      ],
+      "text/markdown": [
+       "9620"
+      ],
+      "text/plain": [
+       "[1] 9620"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "icerca <- which.min(  abs( tb_pred$gan_acum - mcorte_mejor ) )\n",
     "icerca"
@@ -2490,7 +2596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2513,9 +2619,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully submitted to Test202106"
+     ]
+    }
+   ],
    "source": [
     "# la subida a Kaggle\n",
     "comando <- \"kaggle competitions submit\"\n",
@@ -2533,11 +2647,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {
     "id": "9zA_W25c15DP"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1] \"2025-11-15 22:56:14 UTC\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "Sys.time()"
    ]
