--- a/src/churn/C2040/APO-C2040-202106.ipynb
+++ b/src/churn/C2040/APO-C2040-202106.ipynb
@@ -3057,9 +3057,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1] \"2025-11-16 06:42:20 UTC\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# entreno el modelo\n",
     "\n",
@@ -3073,9 +3083,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1] \"2025-11-16 06:42:30 UTC\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# grabo el modelo generado, esto pude ser levantado por LighGBM en cualquier maquina\n",
     "lgb.save(modelo_final, file=\"final_modelo.txt\")\n",
@@ -3084,12 +3104,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "202108"
+      ],
+      "text/latex": [
+       "202108"
+      ],
+      "text/markdown": [
+       "202108"
+      ],
+      "text/plain": [
+       "[1] 202108"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "PARAM$train_entrega$future"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
     "# aplico el modelo a los datos sin clase\n",
-    "dfuture <- dataset[foto_mes %in% PARAM$entrega_final$future]\n",
+    "dfuture <- dataset[foto_mes %in% PARAM$train_entrega$future]\n",
     "\n",
     "# penosamente, en la versión actual de zLightGBM  los campos canaritos\n",
     "#  aunque no se utilizan para nada, también deben estar en el dataset donde se hace el predict()\n",
@@ -3107,7 +3155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3126,7 +3174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3148,6 +3196,13 @@
     "  sep= \",\"\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
