--- a/src/churn/C2050/APO-C2050-202106.ipynb
+++ b/src/churn/C2050/APO-C2050-202106.ipynb
@@ -2646,7 +2646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2665,7 +2665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2680,9 +2680,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "403600000"
+      ],
+      "text/latex": [
+       "403600000"
+      ],
+      "text/markdown": [
+       "403600000"
+      ],
+      "text/plain": [
+       "[1] 403600000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "9940"
+      ],
+      "text/latex": [
+       "9940"
+      ],
+      "text/markdown": [
+       "9940"
+      ],
+      "text/plain": [
+       "[1] 9940"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A data.table: 1 × 5</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>numero_de_cliente</th><th scope=col>foto_mes</th><th scope=col>meta_modelo</th><th scope=col>prob</th><th scope=col>gan_acum</th></tr>\n",
+       "\t<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>1012768780</td><td>202106</td><td>1</td><td>0.04605871</td><td>403600000</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A data.table: 1 × 5\n",
+       "\\begin{tabular}{lllll}\n",
+       " numero\\_de\\_cliente & foto\\_mes & meta\\_modelo & prob & gan\\_acum\\\\\n",
+       " <int> & <int> & <int> & <dbl> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t 1012768780 & 202106 & 1 & 0.04605871 & 403600000\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A data.table: 1 × 5\n",
+       "\n",
+       "| numero_de_cliente &lt;int&gt; | foto_mes &lt;int&gt; | meta_modelo &lt;int&gt; | prob &lt;dbl&gt; | gan_acum &lt;dbl&gt; |\n",
+       "|---|---|---|---|---|\n",
+       "| 1012768780 | 202106 | 1 | 0.04605871 | 403600000 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  numero_de_cliente foto_mes meta_modelo prob       gan_acum \n",
+       "1 1012768780        202106   1           0.04605871 403600000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "icerca <- which.min(  abs( tb_prediccion$gan_acum - mcorte_mejor ) )\n",
     "vmodelo <- tb_prediccion[ icerca, meta_modelo ]\n",
@@ -2695,9 +2772,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "9940"
+      ],
+      "text/latex": [
+       "9940"
+      ],
+      "text/markdown": [
+       "9940"
+      ],
+      "text/plain": [
+       "[1] 9940"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "icerca <- which.min(  abs( tb_pred$gan_acum - mcorte_mejor ) )\n",
     "icerca"
@@ -2705,7 +2801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2728,9 +2824,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully submitted to Test202106"
+     ]
+    }
+   ],
    "source": [
     "# la subida a Kaggle\n",
     "comando <- \"kaggle competitions submit\"\n",
@@ -2748,11 +2852,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {
     "id": "9zA_W25c15DP"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1] \"2025-11-16 18:40:24 UTC\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "Sys.time()"
    ]
@@ -2766,16 +2880,212 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<dl>\n",
+       "\t<dt>$future</dt>\n",
+       "\t\t<dd>202108</dd>\n",
+       "\t<dt>$undersampling</dt>\n",
+       "\t\t<dd>0.05</dd>\n",
+       "\t<dt>$meses</dt>\n",
+       "\t\t<dd><style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>201901</li><li>201902</li><li>201903</li><li>201904</li><li>201905</li><li>201906</li><li>201907</li><li>201908</li><li>201909</li><li>201910</li><li>201911</li><li>201912</li><li>202001</li><li>202002</li><li>202003</li><li>202001</li><li>202002</li><li>202003</li><li>202007</li><li>202008</li><li>202009</li><li>202010</li><li>202011</li><li>202012</li><li>202101</li><li>202102</li><li>202103</li><li>202104</li><li>202105</li><li>202106</li></ol>\n",
+       "</dd>\n",
+       "\t<dt>$training</dt>\n",
+       "\t\t<dd><style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>201901</li><li>201902</li><li>201903</li><li>201904</li><li>201905</li><li>201906</li><li>201907</li><li>201908</li><li>201909</li><li>201910</li><li>201911</li><li>201912</li><li>202001</li><li>202002</li><li>202003</li><li>202001</li><li>202002</li><li>202003</li><li>202007</li><li>202008</li><li>202009</li><li>202010</li><li>202011</li><li>202012</li><li>202101</li><li>202102</li><li>202103</li><li>202104</li><li>202105</li><li>202106</li></ol>\n",
+       "</dd>\n",
+       "</dl>\n"
+      ],
+      "text/latex": [
+       "\\begin{description}\n",
+       "\\item[\\$future] 202108\n",
+       "\\item[\\$undersampling] 0.05\n",
+       "\\item[\\$meses] \\begin{enumerate*}\n",
+       "\\item 201901\n",
+       "\\item 201902\n",
+       "\\item 201903\n",
+       "\\item 201904\n",
+       "\\item 201905\n",
+       "\\item 201906\n",
+       "\\item 201907\n",
+       "\\item 201908\n",
+       "\\item 201909\n",
+       "\\item 201910\n",
+       "\\item 201911\n",
+       "\\item 201912\n",
+       "\\item 202001\n",
+       "\\item 202002\n",
+       "\\item 202003\n",
+       "\\item 202001\n",
+       "\\item 202002\n",
+       "\\item 202003\n",
+       "\\item 202007\n",
+       "\\item 202008\n",
+       "\\item 202009\n",
+       "\\item 202010\n",
+       "\\item 202011\n",
+       "\\item 202012\n",
+       "\\item 202101\n",
+       "\\item 202102\n",
+       "\\item 202103\n",
+       "\\item 202104\n",
+       "\\item 202105\n",
+       "\\item 202106\n",
+       "\\end{enumerate*}\n",
+       "\n",
+       "\\item[\\$training] \\begin{enumerate*}\n",
+       "\\item 201901\n",
+       "\\item 201902\n",
+       "\\item 201903\n",
+       "\\item 201904\n",
+       "\\item 201905\n",
+       "\\item 201906\n",
+       "\\item 201907\n",
+       "\\item 201908\n",
+       "\\item 201909\n",
+       "\\item 201910\n",
+       "\\item 201911\n",
+       "\\item 201912\n",
+       "\\item 202001\n",
+       "\\item 202002\n",
+       "\\item 202003\n",
+       "\\item 202001\n",
+       "\\item 202002\n",
+       "\\item 202003\n",
+       "\\item 202007\n",
+       "\\item 202008\n",
+       "\\item 202009\n",
+       "\\item 202010\n",
+       "\\item 202011\n",
+       "\\item 202012\n",
+       "\\item 202101\n",
+       "\\item 202102\n",
+       "\\item 202103\n",
+       "\\item 202104\n",
+       "\\item 202105\n",
+       "\\item 202106\n",
+       "\\end{enumerate*}\n",
+       "\n",
+       "\\end{description}\n"
+      ],
+      "text/markdown": [
+       "$future\n",
+       ":   202108\n",
+       "$undersampling\n",
+       ":   0.05\n",
+       "$meses\n",
+       ":   1. 201901\n",
+       "2. 201902\n",
+       "3. 201903\n",
+       "4. 201904\n",
+       "5. 201905\n",
+       "6. 201906\n",
+       "7. 201907\n",
+       "8. 201908\n",
+       "9. 201909\n",
+       "10. 201910\n",
+       "11. 201911\n",
+       "12. 201912\n",
+       "13. 202001\n",
+       "14. 202002\n",
+       "15. 202003\n",
+       "16. 202001\n",
+       "17. 202002\n",
+       "18. 202003\n",
+       "19. 202007\n",
+       "20. 202008\n",
+       "21. 202009\n",
+       "22. 202010\n",
+       "23. 202011\n",
+       "24. 202012\n",
+       "25. 202101\n",
+       "26. 202102\n",
+       "27. 202103\n",
+       "28. 202104\n",
+       "29. 202105\n",
+       "30. 202106\n",
+       "\n",
+       "\n",
+       "\n",
+       "$training\n",
+       ":   1. 201901\n",
+       "2. 201902\n",
+       "3. 201903\n",
+       "4. 201904\n",
+       "5. 201905\n",
+       "6. 201906\n",
+       "7. 201907\n",
+       "8. 201908\n",
+       "9. 201909\n",
+       "10. 201910\n",
+       "11. 201911\n",
+       "12. 201912\n",
+       "13. 202001\n",
+       "14. 202002\n",
+       "15. 202003\n",
+       "16. 202001\n",
+       "17. 202002\n",
+       "18. 202003\n",
+       "19. 202007\n",
+       "20. 202008\n",
+       "21. 202009\n",
+       "22. 202010\n",
+       "23. 202011\n",
+       "24. 202012\n",
+       "25. 202101\n",
+       "26. 202102\n",
+       "27. 202103\n",
+       "28. 202104\n",
+       "29. 202105\n",
+       "30. 202106\n",
+       "\n",
+       "\n",
+       "\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "$future\n",
+       "[1] 202108\n",
+       "\n",
+       "$undersampling\n",
+       "[1] 0.05\n",
+       "\n",
+       "$meses\n",
+       " [1] 201901 201902 201903 201904 201905 201906 201907 201908 201909 201910\n",
+       "[11] 201911 201912 202001 202002 202003 202001 202002 202003 202007 202008\n",
+       "[21] 202009 202010 202011 202012 202101 202102 202103 202104 202105 202106\n",
+       "\n",
+       "$training\n",
+       " [1] 201901 201902 201903 201904 201905 201906 201907 201908 201909 201910\n",
+       "[11] 201911 201912 202001 202002 202003 202001 202002 202003 202007 202008\n",
+       "[21] 202009 202010 202011 202012 202101 202102 202103 202104 202105 202106\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "PARAM$train_entrega"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2785,7 +3095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2805,7 +3115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2816,9 +3126,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1] \"2025-11-16 18:45:53 UTC\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "\n",
     "\n",
@@ -2838,7 +3158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2856,7 +3176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2870,9 +3190,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "filas 230640 columnas 1505 \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[1] \"2025-11-16 18:46:01 UTC\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "dtrain_final <- lgb.Dataset(\n",
     "  data= data.matrix(dataset_train_final[training == 1L, campos_buenos, with= FALSE]),\n",
@@ -2886,9 +3223,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1] \"2025-11-16 19:09:02 UTC\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# entreno el modelo\n",
     "\n",
@@ -2902,9 +3249,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1] \"2025-11-16 19:09:19 UTC\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# grabo el modelo generado, esto pude ser levantado por LighGBM en cualquier maquina\n",
     "lgb.save(modelo_final, file=\"final_modelo.txt\")\n",
@@ -2913,16 +3270,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "202108"
+      ],
+      "text/latex": [
+       "202108"
+      ],
+      "text/markdown": [
+       "202108"
+      ],
+      "text/plain": [
+       "[1] 202108"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "PARAM$train_entrega$future"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2945,7 +3321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2964,7 +3340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
