--- a/src/churn/entregas/entrega_final.ipynb
+++ b/src/churn/entregas/entrega_final.ipynb
@@ -13,7 +13,7 @@
    "id": "1355edb6-79a6-416d-874d-fcd4f8ab6c35",
    "metadata": {},
    "source": [
-    "Hice un ensamble de dos modelos, el C2020 y el C2050.\n",
+    "Se hizo un ensamble de dos modelos, el C2020 y el C2050.\n",
     "En las carpetas de /src/churn/C2020 y /src/churn/C2050 estan los dos pipelines de ejecucion y su configuracion. En la carpeta /src/functions estan las funciones utilizadas en los pipelines."
    ]
   },
