--- a/src/churn/C3010/C3010-202107-100271.ipynb
+++ b/src/churn/C3010/C3010-202107-100271.ipynb
@@ -1159,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1167,8 +1167,59 @@
      "output_type": "stream",
      "text": [
       "✅ 'mtarjeta_total_consumo' = suma_segura(mtarjeta_visa_consumo+mtarjeta_master_consumo)\n",
+      "\n",
+      "✅ 'mtarjeta_total_debitos_automaticos' = suma_segura(mttarjeta_visa_debitos_automaticos+mttarjeta_master_debitos_automaticos)\n",
+      "\n",
+      "✅ 'mfinanciacionlimite_total' = suma_segura(Master_mfinanciacion_limite+Visa_mfinanciacion_limite)\n",
+      "\n",
+      "✅ 'msaldopesos_total' = suma_segura(Master_msaldopesos+Visa_msaldopesos)\n",
+      "\n",
+      "✅ 'msaldodolares_total' = suma_segura(Master_msaldodolares+Visa_msaldodolares)\n",
+      "\n",
+      "✅ 'mconsumopesos_total' = suma_segura(Master_mconsumospesos+Visa_mconsumospesos)\n",
+      "\n",
+      "✅ 'mconsumodolares_total' = suma_segura(Master_mconsumosdolares+Visa_mconsumosdolares)\n",
+      "\n",
+      "✅ 'mlimitecompra_total' = suma_segura(Master_mlimitecompra+Visa_mlimitecompra)\n",
+      "\n",
+      "✅ 'madelantopesos_total' = suma_segura(Master_madelantopesos+Visa_madelantopesos)\n",
+      "\n",
+      "✅ 'madelantodolares_total' = suma_segura(Master_madelantodolares+Visa_madelantodolares)\n",
+      "\n",
+      "✅ 'mpagado_total' = suma_segura(Master_mpagado+Visa_mpagado)\n",
+      "\n",
+      "✅ 'mpagopesos_total' = suma_segura(Master_mpagospesos+Visa_mpagospesos)\n",
+      "\n",
+      "✅ 'mpagosdolares_total' = suma_segura(Master_mpagosdolares+Visa_mpagosdolares)\n",
+      "\n",
+      "✅ 'msaldototal_total' = suma_segura(Master_msaldototal+Visa_msaldototal)\n",
+      "\n",
+      "✅ 'mconsumototal_total' = suma_segura(Master_mconsumototal+Visa_mconsumototal)\n",
+      "\n",
+      "✅ 'cconsumos_total' = suma_segura(Master_cconsumos+Visa_cconsumos)\n",
+      "\n",
+      "✅ 'delinquency_total' = suma_segura(Master_delinquency+Visa_delinquency)\n",
+      "\n",
+      "✅ 'mplazofijo_total' = suma_segura(mplazo_fijo_dolares+mplazo_fijo_pesos)\n",
+      "\n",
+      "✅ 'mpayroll_total' = suma_segura(mpayroll+mpayroll2)\n",
+      "\n",
+      "✅ 'minversion1_total' = suma_segura(minversion1_dolares+minversion1_pesos)\n",
+      "\n",
+      "✅ 'cpayroll_total' = suma_segura(cpayroll_trx+cpayroll2_trx)\n",
+      "\n",
+      "✅ 'cseguros_total' = suma_segura(cseguro_vida+cseguro_auto+cseguro_vivienda+cseguro_accidentes_personales)\n",
       "\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[1] \"2025-12-02 01:49:42 UTC\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -1217,31 +1268,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Creando lags: 1, 2\n",
-      "\n",
-      "✅ Lags creados: 350\n",
-      "\n",
-      "Creando delta-lags: 1, 2\n",
-      "\n",
-      "✅ Delta-lags creados: 350\n",
+      "Creando lags: 1, 2, 3\n",
       "\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[1] \"2025-11-30 20:20:25 UTC\""
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
