--- a/src/churn/C3001/APO-C3001-202107.ipynb
+++ b/src/churn/C3001/APO-C3001-202107.ipynb
@@ -4393,7 +4393,7 @@
     "        data.table(\n",
     "        numero_de_cliente = dfuture$numero_de_cliente,\n",
     "        prob              = vpred,\n",
-    "      ), file = sprintf(\"predicciones_modelitos/prediccion_semilla_%s.csv\", sem)\n",
+    "      ), file = sprintf(\"predicciones_modelitos/prediccion_semilla_%s.txt\", sem)\n",
     "      )\n",
     "        \n",
     "      # ---- luego acumulo al ensemble ----\n",
