--- a/src/churn/C3001/APO-C3001-202107.ipynb
+++ b/src/churn/C3001/APO-C3001-202107.ipynb
@@ -95,8 +95,8 @@
     "plocal$gradient_bound <- 0.1\n",
     "plocal$num_iterations <- 33\n",
     "\n",
-    "plocal$APO <- 5\n",
-    "plocal$ksemillerio <- 1\n"
+    "plocal$APO <- 1\n",
+    "plocal$ksemillerio <- 50\n"
    ]
   },
   {
@@ -4269,11 +4269,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "id": "xElu4s5W4rX7"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1] \"2025-12-02 21:08:16 UTC\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# genero los modelitos\n",
     "dir.create( \"modelitos\", showWarnings= FALSE)\n",
@@ -4317,7 +4327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4339,7 +4349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4352,7 +4362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4392,7 +4402,7 @@
     "      fwrite(\n",
     "        data.table(\n",
     "        numero_de_cliente = dfuture$numero_de_cliente,\n",
-    "        prob              = vpred,\n",
+    "        prob              = vpred\n",
     "      ), file = sprintf(\"predicciones_modelitos/prediccion_semilla_%s.txt\", sem)\n",
     "      )\n",
     "        \n",
@@ -4799,8 +4809,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# grabo el modelo generado, esto pude ser levantado por LighGBM en cualquier maquina\n",
-    "lgb.save(modelo_final, file=\"final_modelo.txt\")\n",
+    "# entreno el modelo\n",
+    "\n",
+    "modelo_final <- lgb.train(\n",
+    "  data= dtrain_final,\n",
+    "  param= param_completo\n",
+    ")\n",
+    "\n",
     "Sys.time()"
    ]
   },
@@ -4810,7 +4825,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "PARAM$train_entrega$future"
+    "# genero los modelitos\n",
+    "dir.create( \"modelitos_produccion\", showWarnings= FALSE)\n",
+    "\n",
+    "\n",
+    "for( sem in PARAM$train_final$semillas ) {\n",
+    "\n",
+    "  arch_modelo <- paste0(\"./modelitos_produccion/mod_\", sem, \".txt\")\n",
+    "  if( !file.exists( arch_modelo ) )\n",
+    "  {\n",
+    "    param_completo$seed <- sem\n",
+    "\n",
+    "    modelito <- lgb.train(\n",
+    "      data= dtrain_final,\n",
+    "      param= param_completo\n",
+    "    )\n",
+    "\n",
+    "    lgb.save( modelito, filename= arch_modelo)\n",
+    "    rm(modelito)\n",
+    "    gc()\n",
+    "  }\n",
+    "}\n",
+    "\n",
+    "Sys.time()"
    ]
   },
   {
