acomodo modelos y prediccion finales

--- a/src/churn/C3010/C3010-202107-100271.ipynb
+++ b/src/churn/C3010/C3010-202107-100271.ipynb
@@ -2672,57 +2672,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# entreno el modelo\n",
+    "# ------------------------------------------------------------\n",
+    "# Generación de modelitos para producción\n",
+    "# ------------------------------------------------------------\n",
     "\n",
-    "modelo_final <- lgb.train(\n",
-    "  data= dtrain_final,\n",
-    "  param= PARAM$lgbm\n",
-    ")\n",
+    "dir.create(\"modelitos_produccion\", showWarnings = FALSE)\n",
     "\n",
-    "Sys.time()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# grabo el modelo generado, esto pude ser levantado por LighGBM en cualquier maquina\n",
-    "lgb.save(modelo_final, file=\"final_modelo.txt\")\n",
-    "Sys.time()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "PARAM$train_entrega$future"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# aplico el modelo a los datos sin clase\n",
-    "dfuture <- dataset[foto_mes %in% PARAM$train_entrega$future]\n",
+    "for (sem in PARAM$train_final$semillas) {\n",
     "\n",
-    "# penosamente, en la versión actual de zLightGBM  los campos canaritos\n",
-    "#  aunque no se utilizan para nada, también deben estar en el dataset donde se hace el predict()\n",
-    "filas <- nrow(dfuture)\n",
+    "  arch_modelo <- paste0(\"./modelitos_produccion/mod_\", sem, \".txt\")\n",
     "\n",
-    "for( i in seq(plocal$qcanaritos) ){\n",
-    "  dfuture[, paste0(\"canarito_\",i) := runif( filas) ]\n",
+    "  # Solo entreno si el archivo no existe\n",
+    "  if (!file.exists(arch_modelo)) {\n",
+    "\n",
+    "    param_completo$seed <- sem\n",
+    "\n",
+    "    modelito <- lgb.train(\n",
+    "      data  = dtrain_final,\n",
+    "      param = param_completo\n",
+    "    )\n",
+    "\n",
+    "    # Guardar modelo en disco\n",
+    "    lgb.save(modelito, filename = arch_modelo)\n",
+    "\n",
+    "    # Limpieza\n",
+    "    rm(modelito)\n",
+    "    gc()\n",
+    "  }\n",
     "}\n",
     "\n",
-    "prediccion <- predict(\n",
-    "  modelo_final,\n",
-    "  data.matrix(dfuture[, campos_buenos, with= FALSE]),\n",
-    ")"
+    "Sys.time()\n"
    ]
   },
   {
@@ -2731,50 +2710,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# tabla de prediccion, puede ser util para futuros ensembles\n",
-    "#  ya que le modelo ganador va a ser un ensemble de LightGBMs\n",
+    "# 1) Datos del future (entrega)\n",
+    "dfuture <- dataset[ foto_mes %in% PARAM$train_entrega$future ]\n",
     "\n",
-    "tb_prediccion <- dfuture[, list(numero_de_cliente, foto_mes)]\n",
-    "tb_prediccion[, prob := prediccion ]\n",
+    "filas <- nrow(dfuture)\n",
     "\n",
-    "# grabo las probabilidad del modelo\n",
-    "fwrite(tb_prediccion,\n",
-    "  file= \"prediccion_final.txt\",\n",
-    "  sep= \"\\t\"\n",
-    ")"
+    "# 2) Agrego canaritos (solo una vez)\n",
+    "for( i in seq(plocal$qcanaritos) ){\n",
+    "  dfuture[, paste0(\"canarito_\", i) := runif(filas) ]\n",
+    "}\n",
+    "\n",
+    "# 3) Matriz de features para predict (sin clase)\n",
+    "mfuture <- data.matrix(dfuture[, campos_buenos, with = FALSE])\n",
+    "\n",
+    "# 4) Carpeta donde voy a guardar las predicciones por semilla\n",
+    "dir.create(\"predicciones_produccion\", showWarnings = FALSE)\n",
+    "\n",
+    "# 5) Loop por semillas: cargo modelo, predigo y guardo\n",
+    "for( sem in PARAM$train_final$semillas ) {\n",
+    "\n",
+    "  arch_modelo <- paste0(\"./modelitos_produccion/mod_\", sem, \".txt\")\n",
+    "\n",
+    "  if( file.exists(arch_modelo) ) {\n",
+    "\n",
+    "    modelo_final <- lgb.load(arch_modelo)\n",
+    "\n",
+    "    prediccion <- predict(\n",
+    "      modelo_final,\n",
+    "      mfuture\n",
+    "    )\n",
+    "\n",
+    "    # guardo SOLO numero_de_cliente y prob\n",
+    "    fwrite(\n",
+    "      data.table(\n",
+    "        numero_de_cliente = dfuture$numero_de_cliente,\n",
+    "        prob              = prediccion\n",
+    "      ),\n",
+    "      file = sprintf(\"predicciones_produccion/pred_semilla_%s.csv\", sem)\n",
+    "    )\n",
+    "\n",
+    "    rm(modelo_final, prediccion)\n",
+    "    gc()\n",
+    "  }\n",
+    "}\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# genero archivos con los  \"envios\" mejores\n",
-    "dir.create(\"kaggle\", showWarnings=FALSE)\n",
-    "\n",
-    "# ordeno por probabilidad descendente\n",
-    "setorder(tb_prediccion, -prob)\n",
-    "\n",
-    "envios <- 11000\n",
-    "tb_prediccion[, Predicted := 0L] # seteo inicial a 0\n",
-    "tb_prediccion[1:envios, Predicted := 1L] # marco los primeros\n",
-    "\n",
-    "archivo_kaggle <- paste0(\"./kaggle/KA\", PARAM$experimento, \"_final_\", envios, \".csv\")\n",
-    "\n",
-    "# grabo el archivo\n",
-    "fwrite(tb_prediccion[, list(numero_de_cliente, Predicted)],\n",
-    "  file= archivo_kaggle,\n",
-    "  sep= \",\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
